--- a/index.html
+++ b/index.html
@@ -294,38 +294,91 @@
     /* Responsive Media Queries */
     @media (max-width: 600px) {
       .player-wrapper {
-        padding: 18px 6px 16px 6px;
-        max-width: 98vw;
+        padding: 10px 2vw 10px 2vw;
+        max-width: 100vw;
+        min-width: 0;
+        border-radius: 16px;
       }
       .player-bar {
-        gap: 16px;
+        gap: 10px;
+      }
+      .info h3 {
+        font-size: 1.2rem;
+        letter-spacing: 1px;
+      }
+      .info span {
+        font-size: 0.95rem;
       }
       .controls {
-        gap: 18px;
+        gap: 10px;
+        margin-top: 6px;
+      }
+      .control-btn {
+        width: 48px;
+        height: 48px;
+        font-size: 1.5rem;
+        min-width: 48px;
+      }
+      .volume-icon {
+        font-size: 1.5rem;
+      }
+      .volume-slider {
+        min-width: 110px;
+        padding: 8px 10px;
+        top: calc(100% + 8px);
       }
       .live-badge {
-        right: 12px;
-        top: 8px;
-        font-size: 0.95rem;
-        padding: 4px 12px;
+        right: 8px;
+        top: 6px;
+        font-size: 0.85rem;
+        padding: 3px 10px;
+        border-radius: 10px;
+      }
+      #wave-eq-container {
+        margin-top: 18px;
+      }
+      #wave-eq {
+        width: 100vw !important;
+        min-width: 0;
+        max-width: 100vw;
+        height: 80px !important;
       }
     }
 
     @media (max-width: 400px) {
       .player-wrapper {
-        padding: 8px 2px 8px 2px;
+        padding: 4px 0 4px 0;
+        border-radius: 8px;
       }
-      .player-bar {
-        gap: 10px;
+      .info h3 {
+        font-size: 1rem;
       }
-      .controls {
-        gap: 10px;
+      .info span {
+        font-size: 0.8rem;
+      }
+      .control-btn {
+        width: 38px;
+        height: 38px;
+        font-size: 1.1rem;
+        min-width: 38px;
+      }
+      .volume-icon {
+        font-size: 1.1rem;
+      }
+      .volume-slider {
+        min-width: 70px;
+        padding: 5px 6px;
+        top: calc(100% + 4px);
       }
       .live-badge {
-        right: 4px;
+        right: 2px;
         top: 2px;
-        font-size: 0.8rem;
-        padding: 2px 8px;
+        font-size: 0.7rem;
+        padding: 2px 6px;
+        border-radius: 7px;
+      }
+      #wave-eq {
+        height: 54px !important;
       }
     }
 
