--- a/index.html
+++ b/index.html
@@ -381,8 +381,23 @@
                 <stop offset="80%" stop-color="#a259ff"/>
                 <stop offset="100%" stop-color="#ff00c8"/>
               </linearGradient>
+              <linearGradient id="meshGradRainbow" x1="0%" y1="0%" x2="100%" y2="0%">
+                <stop offset="0%" stop-color="#ff00c8"/>
+                <stop offset="20%" stop-color="#ffb347"/>
+                <stop offset="40%" stop-color="#39ff14"/>
+                <stop offset="60%" stop-color="#00fff7"/>
+                <stop offset="80%" stop-color="#2e6fff"/>
+                <stop offset="100%" stop-color="#a259ff"/>
+              </linearGradient>
               <filter id="glow" x="-50%" y="-50%" width="200%" height="200%">
                 <feGaussianBlur stdDeviation="4" result="coloredBlur"/>
+                <feMerge>
+                  <feMergeNode in="coloredBlur"/>
+                  <feMergeNode in="SourceGraphic"/>
+                </feMerge>
+              </filter>
+              <filter id="glowStrong" x="-50%" y="-50%" width="200%" height="200%">
+                <feGaussianBlur stdDeviation="12" result="coloredBlur"/>
                 <feMerge>
                   <feMergeNode in="coloredBlur"/>
                   <feMergeNode in="SourceGraphic"/>
@@ -938,37 +953,48 @@ function getAudioFeatures() {
   return {amp, energy, voice};
 }
 
+// --- Efecto especial al pasar el mouse o el dedo por el ecualizador ---
+let meshHover = false;
+let rainbowPhase = 0;
+
+meshContainer.addEventListener('mouseenter', () => { meshHover = true; });
+meshContainer.addEventListener('mouseleave', () => { meshHover = false; });
+meshContainer.addEventListener('touchstart', () => { meshHover = true; });
+meshContainer.addEventListener('touchend', () => { meshHover = false; });
+
+// Modifica la función de dibujo para el efecto
 function drawMesh3DReactive() {
   meshPhase += 0.045;
   const {amp: audioAmp, energy, voice} = getAudioFeatures();
-  // Cambiar gradiente dinámicamente según voz/instrumental
-  let grad = meshSVG.querySelector('#meshGrad');
-  if (grad) {
-    if (voice > 0.55) {
-      grad.children[0].setAttribute('stop-color', '#2e6fff'); // azul
-      grad.children[1].setAttribute('stop-color', '#00fff7'); // cian
-      grad.children[2].setAttribute('stop-color', '#a259ff'); // violeta
-      grad.children[3].setAttribute('stop-color', '#2e6fff'); // azul
-    } else {
-      grad.children[0].setAttribute('stop-color', '#00fff7'); // cian
-      grad.children[1].setAttribute('stop-color', '#2e6fff'); // azul
-      grad.children[2].setAttribute('stop-color', '#a259ff'); // violeta
-      grad.children[3].setAttribute('stop-color', '#ff00c8'); // fucsia
+  // Cambiar gradiente dinámicamente según voz/instrumental y hover
+  let grad = meshSVG.querySelector(meshHover ? '#meshGradRainbow' : '#meshGrad');
+  // Animar el gradiente arcoíris si está en hover
+  if (meshHover && grad) {
+    rainbowPhase += 0.02;
+    let stops = grad.children;
+    for (let i = 0; i < stops.length; i++) {
+      let hue = (rainbowPhase*60 + i*60) % 360;
+      stops[i].setAttribute('stop-color', `hsl(${hue}, 100%, 60%)`);
     }
   }
+  // Cambiar el filtro de glow
+  let filterId = meshHover ? 'url(#glowStrong)' : 'url(#glow)';
   let i = 0;
   for (let poly of meshSVG.querySelectorAll('polyline')) {
     const points = [];
-    // Amplitud base + reacción al audio
-    const amp = (32 + 32 * Math.sin(meshPhase/2 + i*0.09)) * (0.7 + 0.7*audioAmp) * (0.7 + 0.7*energy);
+    // Amplitud base + reacción al audio + extra si hover
+    let ampBoost = meshHover ? 1.5 : 1;
+    const amp = (32 + 32 * Math.sin(meshPhase/2 + i*0.09)) * (0.7 + 0.7*audioAmp) * (0.7 + 0.7*energy) * ampBoost;
     const freq = 1.1 + 0.7 * Math.sin(meshPhase/3 + i*0.13) + 0.2*energy;
     const yOffset = 70 + 28 * Math.sin(meshPhase/2.5 + i*0.11);
-    for (let x = 0; x <= meshWidth; x += 6) {
-      let y = yOffset + Math.sin((x/meshWidth)*Math.PI*freq + meshPhase + i*0.13) * amp;
-      y += Math.sin((x/meshWidth)*Math.PI*freq*2 + meshPhase*1.7 + i*0.19) * (amp/3.2);
+    for (let x = 0; x <= meshSVG.width.baseVal.value; x += 6) {
+      let y = yOffset + Math.sin((x/meshSVG.width.baseVal.value)*Math.PI*freq + meshPhase + i*0.13) * amp;
+      y += Math.sin((x/meshSVG.width.baseVal.value)*Math.PI*freq*2 + meshPhase*1.7 + i*0.19) * (amp/3.2);
       points.push(`${x},${y.toFixed(1)}`);
     }
     poly.setAttribute('points', points.join(' '));
+    poly.setAttribute('stroke', meshHover ? 'url(#meshGradRainbow)' : 'url(#meshGrad)');
+    poly.setAttribute('filter', filterId);
     i++;
   }
 }
